- the new xtype "ServerInfoPanel" extracted;

--- a/resources/css/main.css
+++ b/resources/css/main.css
@@ -1,18 +1,43 @@
 .mainpanel
-{
-    background: #000000;
-}
+         {
+             background: #000000;
+         }
 
 .rectangular_panel
-        {
-            background: #000000;
-            border: 2px green dashed;
-        }
+                 {
+                     background: #000000;
+                     border: 2px green dashed;
+                 }
 .circle_panel
-        {
-            background: #000000;
-            border: 2px green dashed;
-            border-left-color: black;
-            -webkit-border-radius: 0 50% 50% 0;
-        }
+                 {
+                     background: #000000;
+                     border: 2px green dashed;
+                     border-left-color: black;
+                     -webkit-border-radius: 0 50% 50% 0;
+                 }
+.search_panel
+                 {
+                     background: #000000;
+                     border: 2px green dashed;
+                     -webkit-border-radius: 50%;
+                 }
+.black_panel
+                 {
+                     background: #000000;
+                 }
+.label_panel
+                 {
+                     color: #FFFFFF;
+                     font-size: 90%;
+                     background: #000000;
+                 }
+.textfield
+                 {
+                   color: #FFFFFF;
+                   background: #000000;
+                 }
+.textfield_input
+                 {
 
+                   color: #FFFFFF;
+                 }
